@@ -27,7 +27,6 @@
 #include "cdo.h"
 #include "cdo_int.h"
 #include "pstream.h"
-#include "dtypes.h"
 
 
 void *Splitsel(void *argument)
