@@ -2,7 +2,7 @@
   This file is part of CDO. CDO is a collection of Operators to
   manipulate and analyse Climate model Data.
 
-  Copyright (C) 2003-2006 Uwe Schulzweida, Uwe.Schulzweida@zmaw.de
+  Copyright (C) 2003-2008 Uwe Schulzweida, Uwe.Schulzweida@zmaw.de
   See COPYING file for copying and redistribution conditions.
 
   This program is free software; you can redistribute it and/or modify
@@ -26,7 +26,6 @@
 #include "cdo.h"
 #include "cdo_int.h"
 #include "pstream.h"
-#include "dtypes.h"
 
 
 void *Trend(void *argument)
@@ -147,6 +146,7 @@ void *Trend(void *argument)
   taxisDefVdate(taxisID2, vdate);
   taxisDefVtime(taxisID2, vtime);
   streamDefTimestep(streamID2, 0);
+  streamDefTimestep(streamID3, 0);
 
   for ( recID = 0; recID < nrecords; recID++ )
     {
