@@ -3,6 +3,7 @@
 	* using CDI library version 1.1.1
 	* configure: --with-szlib=<directory>
 	* configure: check stat.st_blksize
+	* New operator: regres (Regression) [request: Wolfgang Mueller]
 	* New module: Gridcell (gridarea, gridweights)
 	* New operator: del29feb to delete the 29. February [request: Etienne Tourigny]
 	* New operator: zaxisdes
